Address code review feedback
- Use StandardCharsets.UTF_8 directly in URLDecoder
- Convert recursive collectDescendants to iterative approach using queue
- Extract isRootPage helper method for better readability

Co-authored-by: IstiN <854251+IstiN@users.noreply.github.com>